--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Startup Pitch Generator</title>
-    <link rel="shortcut icon" type="image/png" href="/startup-icon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="startup-icon.png"/>
     <!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
