animated finger, updated twitter facebook links, added footer links

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           Subtitle 
       </h2> -->
         <p class="subtitle">
-          Use the <strong>textgenrnn</strong> to help think of your next big
+          Use a recurrent neural network to help think of your next big
           idea!
         </p>
         <button
@@ -70,7 +70,7 @@
             <div class="card">
               <div class="card-content">
                 <p id="pitch-text" class="title">
-                  ☝️ <br />
+                  <span id="finger">☝️</span> <br />
                   Click on the "Generate!" button above to get started!
                 </p>
                 <!-- <p class="subtitle">
@@ -92,7 +92,7 @@
                     Post on
                     <a
                       id="link-facebook"
-                      href="http://www.facebook.com/share.php?u=https://www.akinhwan.site"
+                      href="http://www.facebook.com/share.php?u=https://pitchgen.co/"
                       >Facebook</a
                     >
                   </span>
@@ -101,6 +101,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="container hero-footer">
+        <a href="https://www.akinhwan.site"><strong>Made with 💕 by Akinhwan</strong></a><br>
+        <a href="https://minimaxir.com/"><strong>textgenrnn 📜 by Max Woolf</strong></a>
       </div>
     </section>
     <script src="./main.js"></script>
