producthunt launch, email signup

--- a/index.html
+++ b/index.html
@@ -96,10 +96,57 @@
           </div>
         </div>
       </div>
+      <div class="container ">
+        <p class="subtitle">
+          Stay tuned for more products like this!
+        </p>
+        <form
+          class="field is-grouped"
+          action="https://getform.io/f/9d0bba9d-b70b-41e8-a83a-b2d97b8fcc63"
+          method="POST"
+        >
+          <div class="control has-icons-left email-wrap">
+            <input
+              type="email"
+              placeholder="heyHEYhey@gmail.com"
+              name="email"
+              id="tlemail"
+              required
+              class="input is-primary is-large"
+            />
+            <span class="icon is-small is-left">
+              <i class="fas fa-envelope"></i>
+            </span>
+          </div>
+          <!-- <a class="button" type="submit" id="tlbutton" value="Subscribe">Send</a> -->
+          <button
+            class="button is-warning is-large"
+            type="submit"
+            id="tlbutton"
+            value="Subscribe"
+          >
+            Send
+          </button>
+        </form>
+      </div>
       <div class="container hero-footer">
+        <a
+          class="producthunt"
+          href="https://www.producthunt.com/posts/pitchgen-co?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-pitchgen-co"
+          target="_blank"
+          ><img
+            src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=164820&theme=light"
+            alt="Pitchgen.co - Use a RNN to help think of your next big idea | Product Hunt Embed"
+            style="width: 250px; height: 54px;"
+            width="250px"
+            height="54px"
+        /></a>
         <a class="footer-links" href="https://www.akinhwan.site"
           >Made with 💕 by Akinhwan</a
-        ><br />      
+        ><br />
+        <a class="footer-links" href="https://minimaxir.com/"
+          >textgenrnn 📜 by Max Woolf</a
+        >
       </div>
     </section>
     <script src="./main.js"></script>
